# rust-actix-web-api

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/handlers/: auth_handler.rs
src/models/: auth_model.rs
src/routes/: auth_route.rs
src/services/: auth_service.rs
src/utils/: auth_middleware.rs
test/api/: README.md  postman_collection.json
